--- a/config/crd/patches/cainjection_in_imagedeployers.yaml
+++ b/config/crd/patches/cainjection_in_imagedeployers.yaml
@@ -4,4 +4,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: CERTIFICATE_NAMESPACE/CERTIFICATE_NAME
-  name: imagedeployers.deployer.my.domain
+  name: imagedeployers.deployer.rappizs.com
