--- a/config/rbac/auth_proxy_role_binding.yaml
+++ b/config/rbac/auth_proxy_role_binding.yaml
@@ -5,8 +5,8 @@ metadata:
     app.kubernetes.io/name: clusterrolebinding
     app.kubernetes.io/instance: proxy-rolebinding
     app.kubernetes.io/component: kube-rbac-proxy
-    app.kubernetes.io/created-by: basic-operator
-    app.kubernetes.io/part-of: basic-operator
+    app.kubernetes.io/created-by: deployment-operator
+    app.kubernetes.io/part-of: deployment-operator
     app.kubernetes.io/managed-by: kustomize
   name: proxy-rolebinding
 roleRef:
