--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Test
+      run: make test
+    
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
