--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -21,14 +21,18 @@ jobs:
     - name: Test
       run: make test
 
-    - name: Build Docker images
+    - name: Build Operator image
       uses: docker/build-push-action@v4
       with:
         context: .
+        file: Dockerfile
         push: false
-        tags: |
-          ${{ env.REGISTRY }}/rappizs/${{ env.OPERATOR_IMAGE_NAME }}:latest
-          ${{ env.REGISTRY }}/rappizs/${{ env.NGINX_IMAGE_NAME }}:latest
-        dockerfile: |
-          Dockerfile
-          Dockerfile.nginx
+        tags: ${{ env.REGISTRY }}/rappizs/${{ env.OPERATOR_IMAGE_NAME }}:latest
+
+    - name: Build Nginx image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: Dockerfile.nginx
+        push: false
+        tags: ${{ env.REGISTRY }}/rappizs/${{ env.NGINX_IMAGE_NAME }}:latest
