--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,15 +28,19 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GHCR_PAT }}
  
-    - name: Build and push Docker images
+    - name: Build and push Operator image
       uses: docker/build-push-action@v4
       with:
         context: .
+        file: Dockerfile
         push: true
-        tags: |
-          ${{ env.REGISTRY }}/rappizs/${{ env.OPERATOR_IMAGE_NAME }}:latest
-          ${{ env.REGISTRY }}/rappizs/${{ env.NGINX_IMAGE_NAME }}:latest
-        dockerfile: |
-          Dockerfile
-          Dockerfile.nginx
+        tags: ${{ env.REGISTRY }}/rappizs/${{ env.OPERATOR_IMAGE_NAME }}:latest
+
+    - name: Build and push Nginx image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: Dockerfile.nginx
+        push: true
+        tags: ${{ env.REGISTRY }}/rappizs/${{ env.NGINX_IMAGE_NAME }}:latest
 
