--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Build and Push Image
+name: Build and Push
 
 on:
   push:
@@ -6,12 +6,12 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  OPERATOR_IMAGE_NAME: ${{ github.repository }}
+  OPERATOR_IMAGE_NAME: deployment-operator
   NGINX_IMAGE_NAME: nginx-hello
 
 jobs:
 
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
@@ -20,6 +20,15 @@ jobs:
     
     - name: Test
       run: make test
+
+  build:
+
+    runs-on: ubuntu-latest
+    
+    needs: test
+
+    steps:
+    - uses: actions/checkout@v3
     
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
