--- a/.github/workflows/feature-branch.yaml
+++ b/.github/workflows/feature-branch.yaml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Feature Branch
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 env:
   REGISTRY: ghcr.io
-  OPERATOR_IMAGE_NAME: ${{ github.repository }}
+  OPERATOR_IMAGE_NAME: deployment-operator
   NGINX_IMAGE_NAME: nginx-hello
 
 jobs:
@@ -21,6 +21,15 @@ jobs:
     - name: Test
       run: make test
 
+  build:
+
+    runs-on: ubuntu-latest
+    
+    needs: test
+
+    steps:
+    - uses: actions/checkout@v3
+    
     - name: Build Operator image
       uses: docker/build-push-action@v4
       with:
