--- a/config/crd/patches/webhook_in_appdeployers.yaml
+++ b/config/crd/patches/webhook_in_appdeployers.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: imagedeployers.deployer.rappizs.com
+  name: appdeployers.deployer.rappizs.com
 spec:
   conversion:
     strategy: Webhook
