--- a/config/rbac/appdeployer_editor_role.yaml
+++ b/config/rbac/appdeployer_editor_role.yaml
@@ -1,20 +1,20 @@
-# permissions for end users to edit imagedeployers.
+# permissions for end users to edit appdeployers.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: imagedeployer-editor-role
+    app.kubernetes.io/instance: appdeployer-editor-role
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: deployment-operator
     app.kubernetes.io/part-of: deployment-operator
     app.kubernetes.io/managed-by: kustomize
-  name: imagedeployer-editor-role
+  name: appdeployer-editor-role
 rules:
 - apiGroups:
   - deployer.rappizs.com
   resources:
-  - imagedeployers
+  - appdeployers
   verbs:
   - create
   - delete
@@ -26,6 +26,6 @@ rules:
 - apiGroups:
   - deployer.rappizs.com
   resources:
-  - imagedeployers/status
+  - appdeployers/status
   verbs:
   - get
