--- a/config/rbac/appdeployer_viewer_role.yaml
+++ b/config/rbac/appdeployer_viewer_role.yaml
@@ -1,20 +1,20 @@
-# permissions for end users to view imagedeployers.
+# permissions for end users to view appdeployers.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: imagedeployer-viewer-role
+    app.kubernetes.io/instance: appdeployer-viewer-role
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: deployment-operator
     app.kubernetes.io/part-of: deployment-operator
     app.kubernetes.io/managed-by: kustomize
-  name: imagedeployer-viewer-role
+  name: appdeployer-viewer-role
 rules:
 - apiGroups:
   - deployer.rappizs.com
   resources:
-  - imagedeployers
+  - appdeployers
   verbs:
   - get
   - list
@@ -22,6 +22,6 @@ rules:
 - apiGroups:
   - deployer.rappizs.com
   resources:
-  - imagedeployers/status
+  - appdeployers/status
   verbs:
   - get
