--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -8,7 +8,7 @@ rules:
 - apiGroups:
   - deployer.rappizs.com
   resources:
-  - imagedeployers
+  - appdeployers
   verbs:
   - create
   - delete
@@ -20,13 +20,13 @@ rules:
 - apiGroups:
   - deployer.rappizs.com
   resources:
-  - imagedeployers/finalizers
+  - appdeployers/finalizers
   verbs:
   - update
 - apiGroups:
   - deployer.rappizs.com
   resources:
-  - imagedeployers/status
+  - appdeployers/status
   verbs:
   - get
   - patch
