--- a/config/samples/certificates/cluster_issuer_letsencrypt.yaml
+++ b/config/samples/certificates/cluster_issuer_letsencrypt.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: rappizsolt@gmail.com
+    email: example@example.com
     privateKeySecretRef:
       name: letsencrypt-local
     solvers:
