--- a/config/samples/app_deployer.yaml
+++ b/config/samples/app_deployer.yaml
@@ -1,12 +1,6 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: appdeployer
----
 apiVersion: deployer.rappizs.com/v1
 kind: AppDeployer
 metadata:
-  namespace: appdeployer
   labels:
     app.kubernetes.io/name: appdeployer
     app.kubernetes.io/instance: appdeployer-sample
@@ -20,4 +14,4 @@ spec:
   image: ghcr.io/rappizs/nginx-hello:latest
   containerPort: 80
   servicePort: 80
-  clusterIssuer: letsencrypt-local
+  clusterIssuer: appdeployer-issuer
