--- a/config/samples/certificates/cluster_issuer_letsencrypt.yaml
+++ b/config/samples/certificates/cluster_issuer_letsencrypt.yaml
@@ -1,13 +1,13 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-local
+  name: appdeployer-issuer
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
     email: example@example.com
     privateKeySecretRef:
-      name: letsencrypt-local
+      name: appdeployer-issuer
     solvers:
       - http01:
           ingress:
