--- a/config/samples/certificates/cluster_issuer_selfsigned.yaml
+++ b/config/samples/certificates/cluster_issuer_selfsigned.yaml
@@ -1,6 +1,6 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: selfsigned
+  name: appdeployer-issuer
 spec:
-  selfsigned: {}
+  selfSigned: {}
